--- a/css/style.css
+++ b/css/style.css
@@ -92,6 +92,9 @@ img {
 
 .section-padding{
     padding: 50px 0;
+    box-shadow: rgba(58,78,95,0.2) 0 10px 16px, rgba(58,78,95,0.05) 0 -5px 16px;
+    margin-bottom: 30px;
+    border-radius: 25px;
 }
 .section-header{
     text-align: center;
@@ -651,6 +654,7 @@ canvas{
 .gallery-items {
     position: relative;
     margin-bottom: 30px;
+    margin-top: 20px;
 }
 
 .gallery-items .img {
@@ -845,7 +849,8 @@ canvas{
 /*------- 11. Invitation area starts------*/
 
 .invitation-area {
-    background: #333333;
+    background: #eeeeee;
+    border-radius: 20px;
     color: #ffffff;
 }
 .single-invite h2 {
